infra/k8s-dev/files-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: files-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: files
  template:
    metadata:
      labels:
        app: files
    spec:
      containers:
        - name: files
          image: cardozoalan/files
---
apiVersion: v1
kind: Service
metadata:
  name: files-srv
spec:
  selector:
    app: files
  ports:
    - name: files
      protocol: TCP
      port: 3000
      targetPort: 3000
