infra/k8s-dev/ingress-srv.yaml
#load balancer configuration
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: microservices.dev
      http:
        paths:
          - pathType: Prefix
            path: /api/v1/auth?(.*)
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - pathType: Prefix
            path: /api/v1/files?(.*)
            backend:
              service:
                name: files-srv
                port:
                  number: 3000
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: files-srv
                port:
                  number: 3000
